Home page enhancement W02

--- a/index.html
+++ b/index.html
@@ -24,9 +24,18 @@
                     about it. Today I'm so Happy to have the opportunity to study in BYU-Pathway worldwide and BYU-Idaho online, for continu to developp my knowledge in computer. 
                 </p>
             </main>
+            <aside>
+                <h2>Haïti</h2>
+                <img src="images/haiti.jpeg" alt="The beauties of Haïti" width="300">
+                <p>Haiti, situated in the Caribbean, is a land of striking contrasts. From its lush mountains and tropical forests to its pristine beaches, 
+                    Haiti's natural beauty is unparalleled. Its vibrant culture, a fusion of African, Caribbean, and French influences, is evident in its lively music,
+                    flavorful cuisine, and colorful art. Despite facing challenges such as political instability and economic hardships, Haiti's resilient spirit shines
+                    through in the warmth and hospitality of its people. With a rich history of revolution and independence, Haiti continues to captivate visitors with its
+                    unique charm and allure.</p>
+            </aside>
         <footer>
             <p>©️ 2024 🐬 Isaac Jean-Philippe 🐬 Jacmel, Haïti</p>
         </footer>
     </body>
-    <!-- last modified: may 07, 2024 -->
+    <!-- last modified: may 12, 2024 -->
 </html>
