--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>Isaac Jean-Philippe | WDD130</title>
-        <meta name="description" content="This tells me about where I come from and my aspirations for computing.">
+        <meta name="description" content="This tell about where I come from and my aspirations for computing.">
         <meta name="author" content="Isaac Jean-Philippe">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
