Home page  <!-- last modified: may 12, 2024 -->

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="https://www.linkedin.com/in/isaac-jean-philippe-199b5527a/">Linkedin</a>
+                <a href="https://web.facebook.com/isaac.jeanphilippe.98">Facebook</a>
             </nav>
         </header>
             <main>
@@ -23,8 +25,14 @@
                     didn't had computer. When I had my first smartphone I watched a lot of videos about computer, during few years I developped some knowledge 
                     about it. Today I'm so Happy to have the opportunity to study in BYU-Pathway worldwide and BYU-Idaho online, for continu to developp my knowledge in computer. 
                 </p>
+
+                <ul class="box">
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng" target="_blank">Aba Nigeria Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/toluca-mexico-temple?lang=eng" target="_blank">Toluca Mexico Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/monticello-utah-temple?lang=eng" target="_blank">Monticello Utah Temple</a></li>
+                </ul>
             </main>
-            <aside>
+            <aside class="box">
                 <h2>Haïti</h2>
                 <img src="images/haiti.jpeg" alt="The beauties of Haïti" width="300">
                 <p>Haiti, situated in the Caribbean, is a land of striking contrasts. From its lush mountains and tropical forests to its pristine beaches, 
@@ -37,5 +45,5 @@
             <p>©️ 2024 🐬 Isaac Jean-Philippe 🐬 Jacmel, Haïti</p>
         </footer>
     </body>
-    <!-- last modified: may 12, 2024 -->
+    <!-- last modified: may 13, 2024 -->
 </html>
